test/failing/dupfield1.trunnel

struct x {
  u8 a;
  u8 a;
}
